@@ -21,6 +21,7 @@ dialoguer = { version = "0.9.0", default-features = false }
 directories = "4.0.1"
 indexmap = "1.7.0"
 json5 = "0.4.1"
+once_cell = "1.8.0"
 rmp-serde = "0.15.5"
 rmpv = "1.0.0"
 ron = { version = "0.7.0", features = ["indexmap"] }
@@ -35,6 +36,9 @@ toml = { version = "0.5.8", features = ["preserve_order"] }
 [dev-dependencies]
 assert_cmd = "2.0.2"
 predicates = "2.0.3"
+
+[build-dependencies]
+vergen = { version = "5.1.17", features = ["git"], default-features = false }
 
 [features]
 default = ["regex-fancy"]
